--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -52,6 +52,7 @@
         </div>
         <i class="clear" id="clearStorage"><b class="icon-trash"></b></i>
     </div>
+    <script src="/static/js/pixi.min.js"></script>
     {% include 'chart.html' %}
     <script type="module" src="/static/js/ticker.js"></script>
 </div>
