--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,8 @@
             <a href="/ping">Server Ping</a><br>
             <br>
             <h2>API</h2>
+            <a href="http://localhost:5002/binance/spot/BTCUSDT">Binance - BTCUSDT</a><br>
+            <a href="http://localhost:5002/binance/spot/ETHUSDT">Binance - ETHUSDT</a><br><br>
             <a href="/api/top">API Top Gainers</a><br>
             <a href="/api/heatmap">API Heatmap</a><br>
             <br>
