--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,10 +3,13 @@
             <a href="/">SP500</a>
             <a href="/">Nasdaq</a>
             <a href="/">DXY</a>
-            <a href="/">XAU</a>
-            <a href="/">Total</a>
+            <a href="/">Gold</a>
             <a href="/">BTC</a>
             <a href="/">ETH</a>
+            <a href="/">Total</a>
+            <a href="/">Total2</a>
+            <a href="/">Total3</a>
+            <a href="/">Others</a>
             <a href="/">BTC.D</a>
             <a href="/">USDT.D</a>
         </nav>
