--- a/static/css/core.css
+++ b/static/css/core.css
@@ -78,9 +78,9 @@ header .logo b{position:absolute; top:20px; left:0; right:0; font-size:9px; colo
 .catlinks li a{float:left; width:100%; padding:2px 0; white-space:nowrap; font-size:1.1em; overflow:hidden; text-transform:capitalize; text-overflow:ellipsis}
 
 /*Footer*/
-footer{position:absolute; left:0; right:0; bottom:0; height:30px; line-height:30px; background:#131313; padding:0 15px}
+footer{position:absolute; left:0; right:0; bottom:0; height:30px; line-height:30px; background:#181818; padding:0 15px}
 footer nav{float:left}
-footer nav a{margin-left:10px}
+footer nav a{margin-left:10px; color:#555}
 footer nav a:first-child{margin:0}
 footer span{float:right; font-size:.9em}
 footer span .ping{border-right:1px solid #333; padding-right:10px; margin-right:10px}
