--- a/static/css/ticker.css
+++ b/static/css/ticker.css
@@ -3,7 +3,7 @@
 .ticker.wire{margin-right:300px}
     
 /*Filter*/
-.filter{position:relative; display:block; height:32px; padding:15px}
+.filter{position:relative; display:block; height:32px; padding:15px; text-shadow:none}
 .filter .title{display:none}
 
 .filter .timeframes,.filter .view,.filter .indicator,.filter .clear{float:left; position:relative}
@@ -35,10 +35,10 @@
 
 .filter .indicator{margin-right:3px}
 .filter .indicator i{float:left; width:82px; text-align:left; padding-left:8px}
-.filter .indicator .drop{width:300px; right:-1px}
+.filter .indicator .drop{width:300px; right:-1px; }
 .filter .indicator .drop strong{display:block; font-size:1.2em; color:#333; border-bottom:1px solid #999; padding-bottom:10px; margin:10px}
 .filter .indicator .drop input{float:left; width:calc(100% - 42px); height:30px; border:1px solid #999; color:#333; margin:0 0 10px 10px; padding:0 10px}
-.filter .indicator .drop ul{clear:both; display:block; height:350px; overflow-y:scroll; margin:10px}
+.filter .indicator .drop ul{clear:both; display:block; height:350px; overflow-y:scroll; margin:10px;}
 .filter .indicator .drop ul li{float:left; width:100%; padding:4px 0; color:#333; border-top:1px solid #F5F5F5; cursor:pointer}
 .filter .indicator .drop ul li:first-child{border:none}
 .filter .indicator .drop ul li:hover{color:#000}
