--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -46,8 +46,9 @@
         <div class="view">
             <i><b></b><u></u></i>
             <div class="drop">
-                <a rel="0" onclick="change-style(0)">Line</a>
-                <a rel="1" onclick="change-style(1)">Candles</a>
+                <a rel="candles">Candles</a>
+                <a rel="heikin">Heikin Ashi</a>
+                <a rel="line">Line</a>
             </div>
         </div>
         <i class="clear" id="clearStorage"><b class="icon-trash"></b></i>
