--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -46,6 +46,7 @@
         <div class="view">
             <i><b></b><u></u></i>
             <div class="drop">
+                <a rel="bars">Bars</a>
                 <a rel="candles">Candles</a>
                 <a rel="heikin">Heikin Ashi</a>
                 <a rel="line">Line</a>
