--- a/templates/desk.html
+++ b/templates/desk.html
@@ -4,7 +4,7 @@
 <div class="sidebar"></div>
 <div class="desk wire">    
     <div class="filter">
-        <i class="clear" id="clearStorage"><b class="icon-trash"></b></i>
+        <i class="clear" id="clearStorage"><b class="icon-delete"></b></i>
         <div class="sizer">
             <i rel="-">-</i>
             <i id="w">3</i>
