--- a/static/css/core.css
+++ b/static/css/core.css
@@ -1,4 +1,4 @@
-body{min-width:980px; font-family:'Roboto Condensed',Arial; font-size:15px; text-shadow: 1px 1px 1px rgba(0,0,0,0.2); color:#777; background:#000; cursor:default}
+body{min-width:980px; font-family:'Roboto Condensed',Arial; font-size:15px; color:#777; background:#000; cursor:default}
 html, body{height:100%; min-height:500px}
 body::-webkit-scrollbar{width:4px; height: 4px;}
 body::-webkit-scrollbar-track{background:#020202}
