--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
             <h2>СEX Data Store</h2>
             <a href="http://localhost:5002/tickers/json">All Binance Tickers JSON</a>
         </div>
+        <i><b class="icon-delete"></b></i>
+        <i><b class="icon-full"></b></i>
+        <i><b class="icon-view"></b></i>
     </div>
 </div>
 
