--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,6 +1,9 @@
-<div id="pixi-outer" style="width: 100%; height: 100%; position: relative;">
-  <div id="chart-container" style="width: 100%; height: 608px;" data-exchange="{{ exchange }}" data-market-type="{{ market_type }}" data-symbol="{{ symbol }}"></div>
-  <div class="m-indicators on">        
-    <i class="switcher"><b class="icon-on"></b></i>
-  </div>
+<div id="pixi-outer">
+    <div id="chart-container" data-exchange="{{ exchange }}" data-market-type="{{ market_type }}" data-symbol="{{ symbol }}"></div>
+    <div class="m-ohlcv"></div>
+    <div class="m-fps"></div>
+    <div class="m-live"></div> 
+    <div class="m-indicators on">  
+      <i class="switcher"><b class="icon-on"></b></i>
+    </div>
 </div>
