--- a/templates/tickers.html
+++ b/templates/tickers.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{{ url_for('static', path='css/desk.css') }}">
 <div class="content">
     <div class="filter">
-        <i class="clear" id="clearStorage"><b class="icon-trash"></b></i>
+        <i class="clear" id="clearStorage"><b class="icon-delete"></b></i>
         <label class="hide-small"><input type="checkbox" id="hide-small">Hide LowCap</label>        
         <div class="cex">
             <i>Binance<b></b><u></u></i>
