--- a/static/css/chart.css
+++ b/static/css/chart.css
@@ -1,15 +1,38 @@
-//chart.css
-#pixi-outer{position:relative;}
-.m-indicators.on{position:absolute; top:67px; left:15px; display:block; width:200px}
+#pixi-outer{position:absolute; top:62px; right:0; bottom:0; left:0}
+#chart-container{position:relative; width:100%; height:100%;}
+
+.m-fps{position:absolute; top:40px; left:15px; font-size:.95em; color:#0f0; pointer-events:none}
+
+.m-ohlcv{ position:absolute; top:13px; left:15px; font-size:.95em; pointer-events: none}
+.m-ohlcv strong{text-transform: uppercase; color:#FFC61C; margin-right:10px; cursor:pointer; pointer-events: auto}
+.m-ohlcv i {color:#BDBDBD; margin-right:10px}
+.m-ohlcv i b{color:#666; margin-right:3px}
+
+.m-live{position:absolute; top:0; left:0; width:100%; pointer-events:none}
+.m-live span{position:absolute; right:0; font-size:.9em; text-align:center; width:70px; padding:3px 0; background:#000; color:#fff; transform:translateY(-50%);}
+.m-live span b{font-weight:normal;}
+.m-live span i{display:block; margin-top:2px;}
+.m-live u{position:absolute; left:0; width:100%; height:1px;}
+
+.m-indicators.on{position:absolute; top:85px; left:15px; display:flex; flex-wrap:wrap; max-width:250px}
 .m-indicators{display:none}
 .m-indicators i{cursor:pointer}
 .m-indicators.min span{display:none}
-.m-indicators span{clear:both; display:block; height:20px; margin-bottom:7px; text-shadow: 2px 2px 2px rgba(0,0,0,5);}
+.m-indicators span{clear:both; display:block; width:100%; height:20px; margin-bottom:7px; text-shadow: 2px 2px 2px rgba(0,0,0,5);}
 .m-indicators span strong{float:left; font-size:.9em; font-weight:normal}
 .m-indicators span:hover strong{color:#fff}
 .m-indicators span i{float:left; color margin:0; padding:0; width:16px; margin-left:7px}
 .m-indicators span i:hover{color:#fff}
 .m-indicators span b{float:left; color:#999; font-size:.9em}
 .m-indicators span b:hover{color:#fff}
-.m-indicators .switcher{float:left; color:#999; font-size:1.1em; margin-left:-2px}
+
+.m-indicators .switcher{order: 999; color:#999; font-size:1.1em; margin-left:-2px}
 .m-indicators .switcher:hover{color:#fff}
+
+.iheader{font-size:.95em; height:20px; color:#ccc; padding:8px 0 0 10px; border-top:1px solid #555}
+.iheader span strong{margin-right:7px}
+.iheader span:hover strong{color:#fff; margin-right:12px}
+.iheader span i{display:none; cursor: pointer}
+.iheader span:hover i{display:inline}
+.iheader span i:hover {color:#fff; cursor:pointer}
+.iheader u{color:#999; margin-left:5px}
