--- a/static/css/core.css
+++ b/static/css/core.css
@@ -1,5 +1,5 @@
 body{min-width:980px; font-family:'Roboto Condensed',Arial; font-size:15px; color:#777; background:#000; cursor:default}
-html, body{height:100%; min-height:500px}
+html, body{height:100%; min-height:500px; margin:0}
 body::-webkit-scrollbar{width:4px; height: 4px;}
 body::-webkit-scrollbar-track{background:#020202}
 body::-webkit-scrollbar-thumb{background:#444; border-radius:4px}
@@ -20,7 +20,7 @@ a:hover{color:#fff; text-decoration:none}
 input{font-family:'Roboto Condensed',Arial; font-size:1.1em}
 
 /*Layout*/
-.layout{position:relative; display:block; overflow:hidden; width:100%; min-height:100%}
+.layout{position:relative; display:flex; min-height:100%}
 .content{display:block; margin:50px 0 30px 0}
 .box{clear:both; display:block; overflow:hidden; border:1px solid #333; background:#111; border-radius:15px; padding:17px; margin:0 15px 15px 15px}
 
@@ -36,7 +36,7 @@ h1{font-size:1.6em;}
 .title h1{color:#555}
 
 /*Header*/
-header{position:fixed; z-index:10; top:0 !important; width:100%; min-width:980px; z-index:1000; height:50px; background:#222}
+header{position:fixed; top:0; left:0; right:0; min-width:980px; height:50px; background:#222; z-index:1000}
 header .logo{position:relative; float:left; height:50px; line-height:52px; text-align:center; font-size:1.6em; font-weight:bold; text-transform:uppercase;}
 header .logo b{position:absolute; top:20px; left:0; right:0; font-size:9px; color:#999;}
 
@@ -189,23 +189,6 @@ footer span .icon-ping{font-size:.9em; margin-right:3px}
 
 
 
-
-/*Box WorldMarkets*/
-.wm{clear:both; padding:0 15px 15px 15px}
-.wm div p{color:#fff;}
-.wm #market-us,.wm #market-europe{margin-bottom:10px}
-.wm h3{clear:both; margin:15px 0}
-.wm li{
-    line-height: 1.4;
-    border-bottom: 1px solid #222;
-}
-.wm li:first-child{border-top: 1px solid #222;}
-.wm a{display:block}
-.wm a:hover{background:#222}
-.wm a b{float:left; width:98px; height:20px; overflow:hidden; text-overflow: ellipsis; margin-right:7px}
-.wm a i{float:left; width:54px; overflow:hidden; text-overflow: ellipsis; margin-right:7px}
-.wm a em{float:right; background:#ff0; font-style:normal; font-size:.85em; color:#777}
-.wm a:hover em{color:#ccc}
 
 
 
