--- a/templates/ticker.html
+++ b/templates/ticker.html
@@ -37,10 +37,7 @@
                     <input type="text" id="indicator-search" placeholder="Search" />
                 </div>
                 <ul class="indicator-list ws">
-                    <li>RSI</li>
-                    <li>SMA</li>
-                    <li>MA</li>
-                    <li>Volume</li>
+                    <li>Test</li>
                 </ul>
             </div>
         </div>
