--- a/templates/header.html
+++ b/templates/header.html
@@ -15,6 +15,8 @@
     <header>
         <a class="mm"><i class="icon-mm"></i></a>
         <a href="/" class="logo" title="Tradium">Tradium</a>
+      
+      
         <div class="bar">
             <div class="pd">
                 <a href="/orderbook" class="title-line">Search</a>
@@ -32,12 +34,10 @@
             <a href="/desk">Desk</a>
             <a href="/tickers">Tickers</a>
             <a href="/heatmap">Heatmap</a>
-            <a href="/orderbook">Orderbook</a>
             <a href="/img">Img</a>
-            <a href="/">News</a>
         </nav>
         <div class="rt">
-            <a class="nn hide"><i class="icon-nn"></i></a>
+            <a class="nn"><i class="icon-nn"></i></a>
             
         </div>
     </header>
