--- a/templates/index.html
+++ b/templates/index.html
@@ -26,11 +26,8 @@
             <a href="/api/heatmap">API Heatmap</a><br>
             <br>
             <h2>СEX Data Store</h2>
-            <a href="http://localhost:5002/tickers/json">All Binance Tickers JSON</a>
+            <a href="http://localhost:5002/tickers/json"><b class="icon-view"></b>All Binance Tickers JSON</a>
         </div>
-        <i><b class="icon-delete"></b></i>
-        <i><b class="icon-full"></b></i>
-        <i><b class="icon-view"></b></i>
     </div>
 </div>
 
