--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,8 @@
             <br>
             <h2>API</h2>
             <a href="http://localhost:5002/binance/spot/BTCUSDT">Binance - BTCUSDT</a><br>
-            <a href="http://localhost:5002/binance/spot/ETHUSDT">Binance - ETHUSDT</a><br><br>
+            <a href="http://localhost:5002/binance/spot/ETHUSDT">Binance - ETHUSDT</a><br>
+            <a href="http://localhost:5002/binance/spot/ZECUSDT">Binance - ZECUSDT</a><br><br>
             <a href="/api/top">API Top Gainers</a><br>
             <a href="/api/heatmap">API Heatmap</a><br>
             <br>
