--- a/static/css/ticker.css
+++ b/static/css/ticker.css
@@ -1,7 +1,7 @@
 /*Ticker*/
 .ticker{flex:1; position:relative; min-width:980px; min-height:550px; margin:50px 0 30px 0}
 .ticker.wire{margin-right:300px}
-    
+.ticker .filter{background:#0F0E0E}    
 /*Filter*/
 .filter{position:relative; display:block; height:32px; padding:15px}
 .filter .title{display:none}
